--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "eslint-config-altar",
+  "description": "ESLint and Prettier Config",
   "version": "0.0.1",
   "main": "index.js",
   "repository": "git@github.com:socheatsok78/eslint-config-altar.git",
