--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
   },
   "homepage": "https://github.com/socheatsok78/eslint-config-altar#readme",
   "peerDependencies": {
-    "@vue/cli-plugin-eslint": "^3.6.0",
     "babel-eslint": "^9.0.0",
-    "eslint": "^5.14.1",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-html": "^5.0.3",
@@ -35,12 +34,12 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^1.3.0",
+    "eslint-plugin-vue": "^5.2.2",
     "prettier": "^1.16.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-eslint": "^3.6.0",
     "babel-eslint": "^9.0.0",
-    "eslint": "^5.14.1",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-html": "^5.0.3",
@@ -49,6 +48,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^1.3.0",
+    "eslint-plugin-vue": "^5.2.2",
     "prettier": "^1.16.4"
   }
 }
