--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-config-altar",
-  "description": "ESLint and Prettier Config",
   "version": "0.0.3",
+  "description": "ESLint and Prettier Config for VueJS",
   "main": "index.js",
   "repository": "git@github.com:socheatsok78/eslint-config-altar.git",
   "license": "MIT",
