--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.3.0",
     "eslint-plugin-vue": "^5.2.2",
     "prettier": "^1.16.4"
   },
@@ -44,6 +46,8 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.3.0",
     "eslint-plugin-vue": "^5.2.2",
     "prettier": "^1.16.4"
   }
